fix: add start_date to games
